--- a/package.json
+++ b/package.json
@@ -22,10 +22,19 @@
   "devDependencies": {
     "babel-loader": "^8.0.4",
     "bootstrap": "^4.1.3",
+    "browser-sync": "^2.26.3",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.1",
+    "del": "^3.0.0",
     "extract-loader": "^3.0.0",
     "file-loader": "^2.0.0",
+    "gulp": "^3.9.1",
+    "gulp-cache": "^1.0.2",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "^5.0.3",
+    "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.1",
+    "gulp-useref": "^3.1.6",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.4.0",
@@ -38,6 +47,7 @@
     "path": "^0.12.7",
     "popper.js": "^1.14.5",
     "postcss-loader": "^3.0.0",
+    "run-sequence": "^2.2.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
